--- a/feeds.yaml
+++ b/feeds.yaml
@@ -11,6 +11,7 @@ feeds:
     update_frequency: daily
     blogger: Tipa
     group: Tipa
+    pronouns: she/her
   - name: An Archaeopteryx
     url: https://anarchaeopteryx.bearblog.dev/feed/
     update_frequency: daily
@@ -26,42 +27,50 @@ feeds:
     update_frequency: daily
     category: Gaming
     blogger: Heartless
+    pronouns: he/him
   - name: Tales of the Aggronaut
     url: https://aggronaut.com/feed/
     update_frequency: daily
     category: Gaming
     blogger: Belghast
+    pronouns: he/him
   - name: Words Under My Name
     url: https://wordsundermyname.wordpress.com/feed/
     update_frequency: daily
     category: Writing
     blogger: Blockade85
+    pronouns: he/him
   - name: Dragonchasers
     url: https://dragonchasers.com/feed/
     update_frequency: daily
     category: Gaming
     blogger: Nimgimli
     group: Pete
+    pronouns: he/him
   - name: Inventory Full
     url: https://bhagpuss.blogspot.com/feeds/posts/default?alt=rss
     update_frequency: daily
     category: Gaming
     blogger: Bhagpuss
+    pronouns: he/him
   - name: Scopique
     url: https://scopique.com/feed/
     update_frequency: daily
     category: Tech
     blogger: Scopique
+    pronouns: he/him
   - name: The Friendly Necromancer
     url: https://thefriendlynecromancer.blogspot.com/feeds/posts/default?alt=rss
     update_frequency: daily
     category: Gaming
     blogger: The Friendly Necromancer
+    pronouns: he/him
   - name: The Ancient Gaming Noob
     url: https://tagn.wordpress.com/feed/
     update_frequency: daily
     category: Gaming
     blogger: Wilhelm
+    pronouns: he/him
   - name: Lisette's Mxtadventures
     url: https://lisettesmxtadventures.wordpress.com/feed/?alt=rss
     update_frequency: daily
@@ -72,11 +81,13 @@ feeds:
     update_frequency: daily
     category: Gaming
     blogger: Emily
+    pronouns: she/her
   - name: Nik Kantar
     url: https://nkantar.com/blog/feed/
     update_frequency: daily
     category: General
     blogger: Nik
+    pronouns: he/him
   - name: The Ghastly Mirror
     url: https://www.ghastlymirror.xyz/rss.xml
     update_frequency: daily
@@ -87,11 +98,13 @@ feeds:
     update_frequency: daily
     category: Gaming
     blogger: Frostilyte
+    pronouns: he/him
   - name: Scripting News
     url: http://scripting.com/rss.xml
     update_frequency: daily
     category: Tech
     blogger: Dave Winer
+    pronouns: he/him
   - name: Steve's Blog
     url: https://forums.grc.com/forums/blog/index.rss
     update_frequency: daily
@@ -140,26 +153,31 @@ feeds:
     update_frequency: daily
     category: Gaming
     blogger: Tobold
+    pronouns: he/him
   - name: Contains Moderate Peril
     url: http://www.containsmoderateperil.com/feed/
     update_frequency: daily
     category: Gaming
     blogger: Roger
+    pronouns: he/him
   - name: Bio Break
     url: http://biobreak.wordpress.com/feed/
     update_frequency: daily
     category: Gaming
     blogger: Syp
+    pronouns: he/him
   - name: In An Age
     url: http://inanage.com/feed/
     update_frequency: daily
     category: Gaming
     blogger: Azuriel
+    pronouns: he/him
   - name: A Pixel Nomad
     url: https://pixelnomad.ca/feed/
     update_frequency: daily
     category: Gaming
     blogger: Stargrace
+    pronouns: she/her
   - name: The Daily WTF
     url: https://feeds.feedburner.com/TheDailyWtf
     update_frequency: daily
@@ -170,6 +188,7 @@ feeds:
     update_frequency: daily
     category: Writing
     blogger: Aywren
+    pronouns: she/her
   - name: The Boardgames Chronicle
     url: https://theboardgameschronicle.com/feed/
     update_frequency: daily
@@ -187,6 +206,7 @@ feeds:
     category: Tech
     blogger: Pete
     group: Pete
+    pronouns: he/him
   - name: CrazyKinux's Musings
     url: https://feeds.feedburner.com/CrazykinuxsMusing
     update_frequency: daily
@@ -197,16 +217,19 @@ feeds:
     update_frequency: daily
     category: General
     blogger: Tofutush
+    pronouns: she/her
   - name: Indiecator
     url: https://indiecator.org/feed/
     update_frequency: daily
     category: Gaming
     blogger: Magi
+    pronouns: he/they
   - name: Ready Pixel One
     url: https://feeds.feedburner.com/squarespace/AxkEtpjNxtZ
     update_frequency: daily
     category: Gaming
     blogger: Pixel One
+    pronouns: she/her
   - name: WCRobinson
     url: https://wcrobinson.org/feed/
     update_frequency: daily
@@ -217,6 +240,7 @@ feeds:
     update_frequency: daily
     category: Gaming
     blogger: Naithin
+    pronouns: he/him
   - name: Axxuy
     url: https://axxuy.xyz/blog/feed.xml
     update_frequency: daily
@@ -227,17 +251,20 @@ feeds:
     update_frequency: daily
     category: Gaming
     blogger: Juhis
+    pronouns: he/him
   - name: West Karana
     url: https://westkarana.blog/feed/
     update_frequency: daily
     category: Gaming
     blogger: Tipa
     group: Tipa
+    pronouns: she/her
   - name: Virtual Moose
     url: https://virtualmoose.org/feed/
     update_frequency: daily
     category: Gaming
     blogger: Michael
+    pronouns: he/him
   - name: Going Commando
     url: http://swtorcommando.blogspot.com/feeds/posts/default?alt=rss
     update_frequency: daily
