--- a/feeds.yaml
+++ b/feeds.yaml
@@ -510,7 +510,7 @@ feeds:
     category: Gaming
     blogger: Sey
     pronouns: he/him
-    required: True
+    required: False
   - name: Alexia Unplugged
     url: https://alexiaunplugged.com/feed/
     update_frequency: daily
